# heightmap-visualizer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini
include/: camera.h
include/shader/: shader.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: fragment.fs  vertex.vs
src/: main.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
